-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11
-
Component/s: hotspot
-
Environment:
GCC 5.4.0
-
b10
-
aarch32
-
linux
/home/build/jdk-dev/src/hotspot/cpu/arm/gc/shared/barrierSetAssembler_arm.hpp:35:66: error: expected identifier before ',' token
Register addr, Register count, , int callee_saved_regs) {}
/home/build/jdk-dev/src/hotspot/cpu/arm/stubGenerator_arm.cpp:3301:63: error: no matching function for call to 'BarrierSetAssembler::arraycopy_epilogue(StubGenerator* const, DecoratorSet&, bool, RegisterImpl* const&, Register, Register)'
bs->arraycopy_epilogue(this, decorators, true, to, R12, R3);
Register addr, Register count, , int callee_saved_regs) {}
/home/build/jdk-dev/src/hotspot/cpu/arm/stubGenerator_arm.cpp:3301:63: error: no matching function for call to 'BarrierSetAssembler::arraycopy_epilogue(StubGenerator* const, DecoratorSet&, bool, RegisterImpl* const&, Register, Register)'
bs->arraycopy_epilogue(this, decorators, true, to, R12, R3);
- relates to
-
JDK-8198949 Modularize arraycopy stub routine GC barriers
-
- Resolved
-