8200627: aarch32 - Broken build after JDK-8198949

Reviewed-by: shade, eosterlund